# bmpcode

./: .gitignore  CMakeLists.txt  Makefile  README.md  bmpcode.c  bmpdecode.c  bmpencode.c  main.c  main.h
impl/: decode.c  decode.h  encode.c  encode.h  utils.c  utils.h
